fix: z-indexes for checkboxes and button

--- a/src/pages/auth/FormLogin/FormLogin.module.scss
+++ b/src/pages/auth/FormLogin/FormLogin.module.scss
@@ -34,6 +34,7 @@
 }
 
 .fieldset {
+  position: relative;
   z-index: 5;
 
   display: flex;
@@ -319,6 +320,7 @@
 .passwordResetLink {
   cursor: pointer;
 
+  position: relative;
   z-index: 4;
 
   margin: 0;
