--- a/src/pages/auth/FormRegister/FormRegister.module.scss
+++ b/src/pages/auth/FormRegister/FormRegister.module.scss
@@ -34,7 +34,8 @@
 }
 
 .fieldset {
-  z-index: 2;
+  position: relative;
+  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -49,7 +50,7 @@
 
 .button {
   position: absolute;
-  z-index: 5;
+  z-index: 3;
   bottom: 300px;
   left: 50%;
   transform: translateX(-50%);
@@ -261,8 +262,6 @@
 }
 
 .checkboxPosition {
-  z-index: 1;
-
   display: grid;
   grid-template-columns: var(--text-container-width) var(--grid-column-gap) auto;
 
@@ -342,6 +341,9 @@
 
 .checkboxTextPolicy {
   cursor: pointer;
+
+  position: relative;
+  z-index: 6;
 
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
